--- a/style.css
+++ b/style.css
@@ -66,7 +66,27 @@ section p {
 }
 
 button {
+  color: #F9F9F9;
   font-family: 'DM Sans', sans-serif;
+  font-size: 16px;
+  line-height: 21px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  padding: 14px 32px 15px;
+  gap: 10px;
+
+  background: #69B99D;
+  border: none;
+  border-radius: 4px;
+
+  cursor: pointer;
+}
+
+button:hover {
+  background: #48a888;
 }
 
 footer {
